Manage Inspections Tile Count New files added - [CountOfInspectionDesignByMunicipalityResponse.java] Files modified - [NewForm.js,QueryExecutionController.java,cx2-queries.hbm.xml,MunicipalityAdministration.variables.json,Cx2QueryExecutorService_V1.java,wm-xss-policies.xml,Cx2QueryExecutorServiceImpl.java,project-security.xml,intercept-urls.json,cx2_query.json,MunicipalityAdministration.html,Cx2QueryExecutorService.java,Cx2QueryExecutorServiceImpl_V1.java]

--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -58,7 +58,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn25_2">
                                         <wm-label caption="Manage Inspections" class="p" fontsize="1.5" fontunit="em" name="label13"></wm-label>
-                                        <wm-label caption="00" fontsize="3" fontunit="em" class="p" name="label14"></wm-label>
+                                        <wm-label caption="bind:Variables.CountOfInspectionDesignByMunicipality.firstRecord._count" fontsize="3" fontunit="em" class="p" name="label14"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
